@@ -5,7 +5,7 @@ import com.redis.commands.ICommand;
 import io.netty.buffer.ByteBuf;
 import io.netty.buffer.Unpooled;
 import io.netty.channel.ChannelHandlerContext;
-import io.netty.channel.ChannelInboundHandlerAdapter;
+import io.netty.handler.codec.ByteToMessageDecoder;
 
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -13,124 +13,154 @@ import java.util.List;
 
 /**
  * Netty channel handler for processing incoming Redis commands.
- * Parses RESP protocol, dispatches to appropriate command handlers,
- * and writes RESP-formatted responses back to the client.
+ * Parses RESP protocol using ByteToMessageDecoder for fragmentation support.
+ * 
+ * IMPORTANT: This handler is instantiated per-channel (see NettyRedisServer.initChannel()),
+ * ensuring thread-safety for the argsBuffer field. Each channel has its own handler instance.
+ * 
  * Optimizations:
  * - Reuses ArrayList for argument parsing
  * - Fast integer parsing without object allocation
- * - Efficient ByteBuf reading with minimal string conversions
+ * - Robust handling of pipelined commands
  */
-public class RedisCommandHandler extends ChannelInboundHandlerAdapter {
+public class RedisCommandHandler extends ByteToMessageDecoder {
     // Preallocate list to avoid allocations for small commands
     private static final int INITIAL_ARGS_CAPACITY = 16;
+    private final List<String> argsBuffer = new ArrayList<>(INITIAL_ARGS_CAPACITY);
 
     /**
-     * Processes an incoming Netty message containing a RESP array: parses command and arguments, dispatches the command, writes the RESP-formatted response, and releases the received buffer.
+     * Parses and processes as many complete RESP array commands as are available in the input buffer.
      *
-     * <p>If the parsed argument list is empty or parsing fails, no response is written.</p>
+     * <p>Reads RESP arrays from {@code in}, reusing the handler's argument buffer to collect the command
+     * name and arguments. If a full command is not yet available the reader index is reset and decoding
+     * stops so more data can arrive. For each complete command, resolves the command implementation,
+     * executes it with a view of the argument list, and writes the RESP response to the channel. Unknown
+     * commands result in the Redis error reply "-ERR unknown command 'name'". This method supports
+     * pipelined commands by looping until the input buffer has no more complete commands.</p>
      *
-     * @param ctx the channel handler context used to write responses and manage the channel
-     * @param msg the incoming message, expected to be a Netty {@code ByteBuf} containing a RESP array
+     * @param ctx the Netty channel handler context used to write responses
+     * @param in the inbound byte buffer containing RESP data; reader index is advanced for consumed data
+     * @param out the list to which decoded messages would normally be added (not used; responses are written directly)
      */
     @Override
-    public void channelRead(ChannelHandlerContext ctx, Object msg) {
-        ByteBuf buf = (ByteBuf) msg;
+    protected void decode(ChannelHandlerContext ctx, ByteBuf in, List<Object> out) {
+        while (in.readableBytes() > 0) {
+            in.markReaderIndex();
+            argsBuffer.clear();
 
-        try {
-            List<String> args = parseRespArray(buf);
+            if (!parseRespArray(in, argsBuffer)) {
+                in.resetReaderIndex();
+                return; // Incomplete command, wait for more data
+            }
 
-            if (args.isEmpty()) {
-                return;
+            if (argsBuffer.isEmpty()) {
+                continue;
             }
 
             // Extract command name and arguments
-            String commandName = args.getFirst();
+            String commandName = argsBuffer.get(0);
             ICommand cmd = CommandRegistry.getInstance().get(commandName);
 
             if (cmd == null) {
                 writeResponse(ctx, "-ERR unknown command '" + commandName + "'\r\n");
             } else {
-                // Create a sublist for command args (avoids creating a new ArrayList)
-                List<String> commandArgs = args.size() > 1 ? args.subList(1, args.size()) : List.of();
+                // Create a sublist for command args (view only)
+                List<String> commandArgs = argsBuffer.size() > 1 ? argsBuffer.subList(1, argsBuffer.size()) : List.of();
                 String resp = cmd.execute(commandArgs, ctx);
-                writeResponse(ctx, resp);
+                // null response means async handling (e.g., BLPOP)
+                if (resp != null) {
+                    writeResponse(ctx, resp);
+                }
             }
-
-        } finally {
-            buf.release();
         }
     }
 
-    /**
-     * Parses a RESP array starting at the current reader index of the provided buffer into a list of argument strings.
-     *
-     * The method returns an empty list if the buffer does not contain a well-formed RESP array or if parsing fails.
-     *
-     * @param buf the ByteBuf positioned at the start of a RESP array (expects '*' as the first byte)
-     * @return a List of argument strings in array order, or an empty list on malformed input or parse error
-     */
-    private List<String> parseRespArray(ByteBuf buf) {
-        List<String> result = new ArrayList<>(INITIAL_ARGS_CAPACITY);
+    private static final int INCOMPLETE = Integer.MIN_VALUE;
 
+    /**
+     * Parses a RESP array from the given ByteBuf and appends its elements to the provided list.
+     *
+     * Each bulk string element is added as a UTF-8 Java String; nil bulk strings are represented as `null`.
+     *
+     * @param buf    the ByteBuf containing RESP-encoded data (reader index will be advanced as bytes are consumed)
+     * @param result the list to populate with parsed array elements; existing contents are not cleared by this method
+     * @return       `true` if a complete RESP array was parsed and its elements appended to `result`, `false` if more data is required or the input is malformed
+     */
+    private boolean parseRespArray(ByteBuf buf, List<String> result) {
         try {
+            if (buf.readableBytes() < 1) return false;
+            
             // Check for Array Start (*)
             if (buf.readByte() != '*') {
-                return result;
+                return false;
             }
 
-            // Read Array Length efficiently (no object allocation)
+            // Read Array Length
             int numArgs = readInteger(buf);
-            if (numArgs <= 0) {
-                return result;
-            }
-
+            if (numArgs == INCOMPLETE) return false;
+            if (numArgs < 0) return true; // Nil array (*) or empty
 
             // Read All Arguments
             for (int i = 0; i < numArgs; i++) {
+                if (buf.readableBytes() < 1) return false;
+                
                 // Check for Bulk String Start ($)
                 byte marker = buf.readByte();
-                if (marker != '$') {
-                    break; // Malformed
-                }
+                if (marker != '$') return false;
 
-                // Read String Length efficiently
+                // Read String Length
                 int strLen = readInteger(buf);
+                if (strLen == INCOMPLETE) return false;
                 if (strLen < 0) {
-                    break; // Nil bulk string
+                    result.add(null);
+                    continue;
                 }
 
-                // Read the actual String data with charset conversion
+                if (buf.readableBytes() < strLen + 2) return false;
+
+                // Read the actual String data
                 CharSequence arg = buf.readCharSequence(strLen, StandardCharsets.UTF_8);
                 result.add(arg.toString());
 
                 // Skip trailing \r\n
                 buf.skipBytes(2);
             }
+            return true;
         } catch (Exception e) {
-            // Log parse error but don't crash
-            result.clear();
+            return false;
         }
-
-        return result;
     }
 
     /**
-     * Fast integer parsing from ByteBuf without creating Integer objects.
-     * Reads digits until \r\n and returns the value.
+     * Parse a RESP-style integer directly from the given ByteBuf and advance the reader index past its terminating CRLF.
+     *
+     * The method accepts an optional leading '-' for negative values and consumes the trailing "\r\n" when a full
+     * integer is available. If the buffer does not contain a complete integer line (no '\r' found or not enough bytes
+     * for the terminating CRLF), the reader index is not advanced and the method returns the INCOMPLETE sentinel.
+     *
+     * @param buf the buffer to read the integer from
+     * @return the parsed integer (negative if prefixed with '-'), or INCOMPLETE if more data is required
      */
     private int readInteger(ByteBuf buf) {
+        int rIndex = buf.indexOf(buf.readerIndex(), buf.writerIndex(), (byte) '\r');
+        if (rIndex == -1) return INCOMPLETE;
+        if (buf.readableBytes() < (rIndex - buf.readerIndex() + 2)) return INCOMPLETE; // Need \r\n
+
         int value = 0;
         boolean negative = false;
         byte b = buf.readByte();
-
         if (b == '-') {
             negative = true;
-            b = buf.readByte();
+        } else if (b >= '0' && b <= '9') {
+            value = b - '0';
         }
 
-        while (b != '\r') {
-            value = value * 10 + (b - '0');
+        while (buf.readerIndex() <= rIndex) {
             b = buf.readByte();
+            if (b == '\r') break;
+            if (b >= '0' && b <= '9') {
+                value = value * 10 + (b - '0');
+            }
         }
         buf.skipBytes(1); // Skip \n
 
